# wav2tabHF

./: README.md
music_analyzer/: .env  Dockerfile  docker-compose.yml  pyproject.toml
music_analyzer/app/: __init__.py  main.py  separate.py  tab_generation.py  tempo.py  transcribe.py
music_analyzer/tests/: e2e_test.py  test_cli.py  test_mapping.py
