[project]
name = "audio-tab-generator"
version = "0.1.0"
description = "CLI + library that splits audio into guitar/bass/vocals, transcribes to tabs, and exports GuitarPro files."
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "demucs==4.0.1",
    "basic-pitch==0.2.5",
    "librosa==0.10.2",
    "soundfile>=0.12.1",
    "miditoolkit==0.1.16",
    "pyguitarpro==0.9.3",
    "music21==8.3.0",
    "madmom==0.17.1",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "ffmpeg-python==0.2.0",
]

[project.scripts]
audio-tab-gen = "app.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-mock>=3.12.0",
    "black>=24.3.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "build>=1.2.1",
]
